--- a/src/Components/Registration/Registration.css
+++ b/src/Components/Registration/Registration.css
@@ -1,6 +1,6 @@
 
 html,body{
-    background-image: url('../../images/38598.jpg');
+    /* background-image: url('../../images/38598.jpg'); */
     min-width: 100%;
     min-height: 100%;
     background-size: cover;
@@ -9,22 +9,21 @@ html,body{
 
 
 .Registration_Container_Row{
-    padding: 1rem 24rem;
+    padding: 3rem 14rem;
 }
 .BtnSubmit{
     width: inherit !important;
 }
 .BtnNext{
     padding: 7px 10px;
-    width: 528px;
+    width: 636px; 
     margin-top: 10px;
     margin-left: 12px;
 
 }
 .BtnHome{
     padding: 7px 10px;
-    width: 528px;
- 
+    width: 636px; 
     margin: 10px 12px;       
 }
 
@@ -40,6 +39,8 @@ html,body{
     border: 1px solid rgba( 255, 255, 255, 0.18 );
     
     height: 760px;
+    width: 60%;
+     
 }
 .Step2Step{
            
@@ -53,6 +54,8 @@ html,body{
     color:red;
     
 }
-/* .mb-3{
-    margin-bottom: 0.5rem!important;
-} */
+.FormTextBox{
+    height:40px;
+    /* font-size: 20px; */
+
+}
